--- a/test.html
+++ b/test.html
@@ -15,30 +15,36 @@
             margin: 0;
             background-color: #f0f0f0;
         }
+
         h1 {
-            margin-bottom: 20px;
-            font-size: 24px;
+            margin-bottom: 130px;
+            font-size: 100px;
         }
+
         button {
             padding: 10px 20px;
-            margin: 5px;
-            font-size: 16px;
+            margin: 10px;
+            font-size: 45px;
             border: none;
-            border-radius: 5px;
+            border-radius: 20px;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
         }
-        button:hover {
-            background-color: #ddd;
-        }
+
+            button:hover {
+                background-color: #ddd;
+            }
+
         #likeBtn {
             background-color: #4CAF50;
             color: white;
         }
+
         #dislikeBtn {
             background-color: #f44336;
             color: white;
         }
+
         #message {
             margin-top: 20px;
             font-size: 18px;
@@ -56,8 +62,11 @@
         const likeBtn = document.getElementById('likeBtn');
         const dislikeBtn = document.getElementById('dislikeBtn');
         const message = document.getElementById('message');
-
-        likeBtn.addEventListener('click', function() {
+        const disScaleValues = [1, 0.8, 0.5, 0.3, 0.1, 0.0000000000000000000000000001];
+        const likeScaleValues = [1, 1.5, 2, 2.5, 3, 5, 10];
+        let likeScaleIndex = 0;
+        let disScaleIndex = 0;
+        likeBtn.addEventListener('click', function () {
             message.style.display = 'block';
             likeBtn.style.transform = 'scale(1.5)';
             dislikeBtn.style.transform = 'scale(0.5)';
@@ -66,9 +75,11 @@
             }, 300);
         });
 
-        dislikeBtn.addEventListener('click', function() {
-            this.style.transform = 'scale(0.5)';
-            likeBtn.style.transform = 'scale(1.5)';
+        dislikeBtn.addEventListener('click', function () {
+            this.style.transform = 'scale(' + disScaleValues[disScaleIndex] + ')';
+            disScaleIndex = (disScaleIndex + 1) % disScaleValues.length;
+            likeBtn.style.transform = 'scale(' + likeScaleValues[likeScaleIndex] + ')';
+            likeScaleIndex = (likeScaleIndex + 1) % likeScaleValues.length;
         });
     </script>
 </body>
