--- a/test.html
+++ b/test.html
@@ -13,11 +13,15 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            background-image: url('background.jpg'); /* 背景图片 */
+            background-size: cover; /* 背景图片覆盖整个元素 */
+            background-position: center; /* 背景图片居中显示 */
+            background-repeat: no-repeat; /* 背景图片不重复 */
+            background-attachment: fixed; /* 背景图片固定，不随页面滚动 */
         }
 
         h1 {
-            margin-bottom: 130px;
+            margin-bottom: 200px;
             font-size: 70px;
         }
 
@@ -29,6 +33,7 @@
             border-radius: 20px;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
+           
         }
 
             button:hover {
@@ -43,6 +48,7 @@
         #dislikeBtn {
             background-color: #f44336;
             color: white;
+            position: absolute;
         }
 
         #message {
@@ -72,14 +78,22 @@
             dislikeBtn.style.transform = 'scale(0.5)';
             setTimeout(() => {
                 likeBtn.parentElement.innerHTML = message.innerHTML;
+                document.body.style.backgroundImage = 'url(' + 'changebackground.gif' + ')';
+                document.body.style.backgroundSize = 'contain';
+                document.body.style.marginTop = '-300px';
             }, 300);
         });
-
-        dislikeBtn.addEventListener('click', function () {
-            this.style.transform = 'scale(' + disScaleValues[disScaleIndex] + ')';
-            disScaleIndex = (disScaleIndex + 1) % disScaleValues.length;
-            likeBtn.style.transform = 'scale(' + likeScaleValues[likeScaleIndex] + ')';
-            likeScaleIndex = (likeScaleIndex + 1) % likeScaleValues.length;
+        dislikeBtn.addEventListener('touchstart', function () {
+            const x = Math.random() * (window.innerWidth - this.offsetWidth);
+            const y = Math.random() * (window.innerHeight - this.offsetHeight);
+            this.style.left = x + 'px';
+            this.style.top = y + 'px';
+        });
+        dislikeBtn.addEventListener('mouseenter', function () {
+            const x = Math.random() * (window.innerWidth - this.offsetWidth);
+            const y = Math.random() * (window.innerHeight - this.offsetHeight);
+            this.style.left = x + 'px';
+            this.style.top = y + 'px';
         });
     </script>
 </body>
