--- a/test.html
+++ b/test.html
@@ -13,10 +13,10 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-image: url('background.jpg'); /* 背景图片 */
-            background-size: cover; /* 背景图片覆盖整个元素 */
+            background-image: url('background.gif'); /* 背景图片 */
+
             background-position: center; /* 背景图片居中显示 */
-            background-repeat: no-repeat; /* 背景图片不重复 */
+
             background-attachment: fixed; /* 背景图片固定，不随页面滚动 */
         }
 
